--- a/SpinningWheel/Views/Home/Index.cshtml
+++ b/SpinningWheel/Views/Home/Index.cshtml
@@ -2,11 +2,11 @@
     Layout = "_HomeLayout";
 }
 
-<div class="home-container">
-    <div class="logo-gs-putih" id="logo-gs-putih">
-        <img src="~/images/Logo-GS Putih.png" />
-    </div>
+<div class="logo-gs-putih" id="logo-gs-putih">
+    <img src="~/images/Logo-GS Putih.png" />
+</div>
 
+<div class="home-container">
     <div class="title-CRP" id="title-CRP">
         <p>Cost Reduction Program (CRP)</p>
     </div>
@@ -16,7 +16,30 @@
     </div>
 
     <div class="tiktok-screen">
-        <video src="~/videos/Video-Home.mov" autoplay muted loop playsinline></video>
+        <video id="videoPlayer" autoplay loop muted>
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+            <source src="~/videos/Video-Home.mp4" type="video/mp4" />
+        </video>
+        <audio autoplay loop>
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+            <source src="~/audios/Audio-Home.mp3" type="audio/mp3" />
+        </audio>
     </div>
 </div>
 
