--- a/SpinningWheel/Views/Shared/_MainItemLayout.cshtml
+++ b/SpinningWheel/Views/Shared/_MainItemLayout.cshtml
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SpinningWheel.styles.css" asp-append-version="true" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:100,200,300,400,500,600,700,800,900">
-
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <link href="~/css/font-rubik.css?family=Rubik:300,400,500,600,700,800,900" rel="stylesheet">
+    <script src="~/js/jquery-3.6.4.min.js"></script>
 </head>
 <body id="main-item-body">
     <div class="container">
