--- a/SpinningWheel/Views/Shared/_SpinWheelLayout.cshtml
+++ b/SpinningWheel/Views/Shared/_SpinWheelLayout.cshtml
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SpinningWheel.styles.css" asp-append-version="true" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:100,200,300,400,500,600,700,800,900">
-
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
+    <script src="~/js/jquery-3.6.4.min.js"></script>
+    <link href="~/css/font-rubik.css?family=Rubik:300,400,500,600,700,800,900" rel="stylesheet">
+    
     <!-- Chart JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="~/js/chart.min.js"></script>
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script> *@
     <!-- Chart JS Plugin for displaying text over chart -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script> *@
+    <script src="~/js/chartjs-plugin-datalabels.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-fillet"></script>
+    @*
+    <script src="./node_modules/chart.js/dist/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-fillet"></script> *@
 
 </head>
 <body id="spin-wheel-body">
