--- a/SpinningWheel/Views/Shared/_EnterNameLayout.cshtml
+++ b/SpinningWheel/Views/Shared/_EnterNameLayout.cshtml
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SpinningWheel.styles.css" asp-append-version="true" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:100,200,300,400,500,600,700,800,900">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="~/css/icon.css?material-icons" rel="stylesheet">
+    <link href="~/css/font-rubik.css?family=Rubik:300,400,500,600,700,800,900" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="~/js/jquery-3.6.4.min.js"></script>
 </head>
+
 <body id="enterName-body">
     <div class="container">
         <main role="main">
